--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <!-- Favicons -->
-    <link href="images/logo/Favicons.png" rel="icon">
+   <link href="images/logo/Elite favicon.png" rel="icon">
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
