--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
    <link href="images/logo/Elite favicon.png" rel="icon">
+
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
@@ -32,8 +33,8 @@
                     <div id="logo">
                         <h1>
                             <a class="navbar-brand px-0 mx-0" href="index.html">
-                                <!-- <img src="images/logo/logo.png" alt=""> -->
-                                logo
+                                <img src="images/logo/Elite logo .png" alt="">
+                                
                             </a>
                         </h1>
                     </div>
