--- a/System_Integrator.html
+++ b/System_Integrator.html
@@ -241,7 +241,7 @@
                         <script>
                             document.write(new Date().getFullYear());
                         </script> All rights reserved | Design by
-                        <a href="http://sentry-is.com/" target="_blank">Sentry</a></p>
+                        <a href="http://sentry-is.com/" target="_blank">premium</a></p>
 
                 </div>
                 <!-- move top -->
