--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-   <link href="images/logo/Elite favicon.png" rel="icon">
+    <!-- Favicons -->
+    <link href="images/logo/Elite favicon.png" rel="icon">
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
@@ -31,12 +32,12 @@
                     <!-- nav -->
                     <nav class="wthree-w3ls">
                         <div id="logo">
-                            <h1>
-                                <a class="navbar-brand px-0 mx-0" href="index.html">
-                                    <!-- <img src="images/logo/logo.png" alt=""> -->
-                                    logo
-                                </a>
-                            </h1>
+                                <h1>
+                                        <a class="navbar-brand px-0 mx-0" href="index.html">
+                                            <img src="images/logo/Elite logo .png" alt="">
+                                            
+                                        </a>
+                                    </h1>
                         </div>
 
                         <label for="drop" class="toggle">Menu</label>
@@ -242,7 +243,7 @@
                         <script>
                             document.write(new Date().getFullYear());
                         </script> All rights reserved | Design by
-                        <a href="http://sentry-is.com/" target="_blank">premium</a></p>
+                        <a href="http://sentry-is.com/" target="_blank">Sentry</a></p>
 
                 </div>
                 <!-- move top -->
