--- a/error.html
+++ b/error.html
@@ -47,9 +47,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <!-- nav -->
                     <nav class="wthree-w3ls">
                         <div id="logo">
-                            <h1> <a class="navbar-brand px-0 mx-0" href="index.html">Infinitude
-                                </a>
-                            </h1>
+                                <h1>
+                                        <a class="navbar-brand px-0 mx-0" href="index.html">
+                                            <img src="images/logo/Elite logo .png" alt="">
+                                            
+                                        </a>
+                                    </h1>
                         </div>
 
                         <label for="drop" class="toggle">Menu</label>
