--- a/System_Integrator.html
+++ b/System_Integrator.html
@@ -31,9 +31,12 @@
                     <!-- nav -->
                     <nav class="wthree-w3ls">
                         <div id="logo">
-                            <h1> <a class="navbar-brand px-0 mx-0" href="index.html">logo
-                                </a>
-                            </h1>
+                                <h1>
+                                        <a class="navbar-brand px-0 mx-0" href="index.html">
+                                            <img src="images/logo/Elite logo .png" alt="">
+                                            
+                                        </a>
+                                    </h1>
                         </div>
 
                         <label for="drop" class="toggle">Menu</label>
