--- a/projectDetials.html
+++ b/projectDetials.html
@@ -6,7 +6,9 @@
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
+
    <link href="images/logo/Elite favicon.png" rel="icon">
+   
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
@@ -33,9 +35,12 @@
                     <!-- nav -->
                     <nav class="wthree-w3ls">
                         <div id="logo">
-                            <h1> <a class="navbar-brand px-0 mx-0" href="index.html">logo
-                                    </a>
-                            </h1>
+                                <h1>
+                                        <a class="navbar-brand px-0 mx-0" href="index.html">
+                                            <img src="images/logo/Elite logo .png" alt="">
+                                            
+                                        </a>
+                                    </h1>
                         </div>
 
                         <label for="drop" class="toggle">Menu</label>
@@ -248,7 +253,7 @@
                         <script>
                             document.write(new Date().getFullYear());
                         </script> All rights reserved | Design by
-                        <a href="http://sentry-is.com/" target="_blank">premium</a></p>
+                        <a href="http://sentry-is.com/" target="_blank">Sentry</a></p>
 
                 </div>
                 <!-- move top -->
