--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
     <!-- Favicons -->
-    <link href="images/logo/Elite favicon.png" rel="icon">
+    <link href="images/logo/Elite favicon.png " rel="icon">
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
@@ -33,7 +33,7 @@
                     <nav class="wthree-w3ls">
                         <div id="logo">
                                 <h1>
-                                        <a class="navbar-brand px-0 mx-0" href="index.html">
+                                        <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
                                             <img src="images/logo/Elite logo .png" alt="">
                                             
                                         </a>
