--- a/projectDetials.html
+++ b/projectDetials.html
@@ -36,7 +36,7 @@
                     <nav class="wthree-w3ls">
                         <div id="logo">
                                 <h1>
-                                        <a class="navbar-brand px-0 mx-0" href="index.html">
+                                        <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
                                             <img src="images/logo/Elite logo .png" alt="">
                                             
                                         </a>
@@ -91,7 +91,7 @@
                         <li class="breadcrumb-item">
                             <a href="index.html">Home</a>
                         </li>
-                        <li class="breadcrumb-item active">About</li>
+                        <li class="breadcrumb-item active">Projects</li>
                     </ol>
 
                 </div>
@@ -253,7 +253,7 @@
                         <script>
                             document.write(new Date().getFullYear());
                         </script> All rights reserved | Design by
-                        <a href="http://sentry-is.com/" target="_blank">Sentry</a></p>
+                        <a href="http://sentry-is.com/" target="_blank">Premium</a></p>
 
                 </div>
                 <!-- move top -->
