--- a/vue.html
+++ b/vue.html
@@ -32,7 +32,7 @@
                     <nav class="wthree-w3ls">
                         <div id="logo">
                                 <h1>
-                                        <a class="navbar-brand px-0 mx-0" href="index.html">
+                                        <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
                                             <img src="images/logo/Elite logo .png" alt="">
                                             
                                         </a>
