--- a/System_Integrator.html
+++ b/System_Integrator.html
@@ -159,12 +159,12 @@
                   </svg>
         <div class="container py-sm-3">
             <div class="row footer-grids">
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4 mt-4 logo2 ">
 
                     <h2>
                         <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">
-                            <!-- <img src="images/logo/Favicons.png" alt=""> -->
-                            logo
+                            <img src="images/logo/Elite favicon.png" alt="">
+                            
                         </a>
                     </h2>
 
