--- a/error.html
+++ b/error.html
@@ -130,7 +130,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <footer class="py-lg-5 py-4">
         <div class="container py-sm-3">
             <div class="row footer-grids">
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4 mt-4 logo2">
 
                     <h2> <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">Infinitude
                         </a>
