--- a/error.html
+++ b/error.html
@@ -132,7 +132,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="row footer-grids">
                 <div class="col-lg-4 mt-4 logo2">
 
-                    <h2> <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">Infinitude
+                    <h2> <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">
+                            <img src="images/logo/Elite favicon.png" alt="" >
                         </a>
                     </h2>
                     <p class="mb-3">Lorem Ipsum is simply text the printing and typesetting standard industry. Onec Consequat sapien ut cursus rhoncus. Nullam dui mi, vulputate ac metus.</p>
@@ -214,8 +215,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
             <div class="row d-flex">
                 <div class="col-lg-9 copy_w3pvt">
-                    <p class="text-lg-left text-center">© 2019 Infinitude. All rights reserved | Design by
-                        <a href="http://w3layouts.com/" target="_blank">W3layouts</a></p>
+                    <p class="text-lg-left text-center">© 2020 Infinitude. All rights reserved | Design by
+                        <a href="http://w3layouts.com/" target="_blank">premium</a></p>
 
                 </div>
                 <!-- move top -->
