--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-   <link href="images/logo/Elite favicon.png" rel="icon">
+    <link href="images/logo/Elite favicon.png" rel="icon">
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/animate.css">
     <!-- Bootstrap-Core-CSS -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <!-- Style-CSS -->
@@ -30,12 +31,12 @@
                 <!-- nav -->
                 <nav class="wthree-w3ls">
                     <div id="logo">
-                            <h1>
-                                    <a class="navbar-brand px-0 mx-0 logo1 " href="index.html">
-                                        <img src="images/logo/Elite logo .png" alt="">
-                                        
-                                    </a>
-                                </h1>
+                        <h1>
+                            <a class="navbar-brand px-0 mx-0 logo1 " href="index.html">
+                                <img src="images/logo/Elite logo .png" alt="">
+
+                            </a>
+                        </h1>
                     </div>
 
                     <label for="drop" class="toggle">Menu</label>
@@ -45,7 +46,7 @@
                         <li><a href="about.html">About</a></li>
                         <li>
                             <label for="drop-2" class="toggle toggle-2">services <span class="fa fa-angle-down"
-                                        aria-hidden="true"></span> </label>
+                                    aria-hidden="true"></span> </label>
                             <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul>
@@ -119,8 +120,8 @@
                 </div>
             </div>
             <!-- banner-hny-info -->
-            <div class="banner-hny-info">
-                <h3> Company name is a National Saudi Company</h3>
+            <div   class="banner-hny-info wow fadeInUp" data-wow-duration="2s" >
+                <h3 > Company name is a National Saudi Company</h3>
                 <div class="top-buttons mx-auto text-center mt-md-5 mt-3">
                     <a href="about.html" class="btn more mr-2">Read More</a>
                     <a href="contact.html" class="btn">Contact Us</a>
@@ -134,7 +135,9 @@
     </div>
     <!-- //banner -->
     <svg class="Section-curve-about" viewBox="0 0 100 5">
-        <path fill="#fff" d="M100,0 L100,5 L-2.42861287e-17,5 L-1.11022302e-16,0 C-1.11022302e-16,0 25,5 50,5 C75,5 100,0 100,0 Z"></path>
+        <path fill="#fff"
+            d="M100,0 L100,5 L-2.42861287e-17,5 L-1.11022302e-16,0 C-1.11022302e-16,0 25,5 50,5 C75,5 100,0 100,0 Z">
+        </path>
     </svg>
     <!-- //home -->
 
@@ -142,12 +145,14 @@
     <section class="about py-5">
         <div class="container p-md-5">
             <div class="about-hny-info text-left px-md-5">
-                <h3 class="tittle-w3ls mb-3"><span class="pink">Who</span> we are</h3>
-                <p class="sub-tittle mt-3 mb-4">
-                    Company name is a National Saudi Company, Partners and Authorized Distributors for many of the International Brands in the Field of Communications and Networking, we offer all the technical solutions for Low current Systems through a well-educated, trained
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s" ><span class="pink">Who</span> we are</h3>
+                <p class="sub-tittle mt-3 mb-4 wow fadeInLeft " data-wow-duration="2s">
+                    Company name is a National Saudi Company, Partners and Authorized Distributors for many of the
+                    International Brands in the Field of Communications and Networking, we offer all the technical
+                    solutions for Low current Systems through a well-educated, trained
                     Engineers and Technicians.
                 </p>
-                <a class="btn more black" href="about.html" role="button">Read More</a>
+                <a class="btn more black wow fadeInLeft" data-wow-duration="2s" href="about.html" role="button">Read More</a>
             </div>
         </div>
     </section>
@@ -155,7 +160,7 @@
     <!--services-->
     <section class="team banner_bottom py-5 " id="about">
         <div class="container ">
-            <h3 class="tittle-w3ls  mb-3 text-left"><span class="pink">What</span> We Provide</h3>
+            <h3 class="tittle-w3ls  mb-3 text-left wow fadeInLeft " data-wow-duration="1s"><span class="pink">What</span> We Provide</h3>
             <!-- <div class="row mt-lg-5 mt-4">
                 <div class="col-md-4 team-gd text-center">
                     <div class="team-img mb-4">
@@ -233,7 +238,7 @@
             </div> -->
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card wow fadeInLeft " data-wow-duration="3s" >
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner2.jpg" alt="">
@@ -250,7 +255,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card wow fadeInLeft " data-wow-duration="2s"  >
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner1.jpg" alt="">
@@ -267,7 +272,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card wow fadeInLeft " data-wow-duration="1s"  >
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/ab.jpg" alt="">
@@ -284,7 +289,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card wow fadeInLeft " data-wow-duration="3s"  >
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/ab.jpg" alt="">
@@ -301,7 +306,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card wow fadeInLeft " data-wow-duration="2s" >
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner2.jpg" alt="">
@@ -318,7 +323,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card wow fadeInLeft " data-wow-duration="1s"  >
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner3.jpg" alt="">
@@ -342,25 +347,27 @@
 
 
     <!--/mid-->
-    <section class="banner_bottom" id="appointment">
+    <section class="banner_bottom "     id="appointment">
         <div class="container py-md-5">
             <div class="row inner_sec_info">
 
 
                 <div class="col-lg-5 banner_bottom_left">
 
-                    <div class="login p-md-5 p-4 mx-auto bg-white mw-100">
+                    <div class="login p-md-5 p-4 mx-auto bg-white mw-100   wow fadeInLeft " data-wow-duration="2s"    >
                         <h4>
                             Contact Us</h4>
                         <form action="#" method="post">
                             <div class="form-group">
                                 <label>First name</label>
 
-                                <input type="text" class="form-control" id="validationDefault01" placeholder="" required="">
+                                <input type="text" class="form-control" id="validationDefault01" placeholder=""
+                                    required="">
                             </div>
                             <div class="form-group">
                                 <label>Last name</label>
-                                <input type="text" class="form-control" id="validationDefault02" placeholder="" required="">
+                                <input type="text" class="form-control" id="validationDefault02" placeholder=""
+                                    required="">
                             </div>
 
                             <div class="form-group mb-4">
@@ -375,7 +382,7 @@
                     </div>
 
                 </div>
-                <div class="col-lg-7 banner_bottom_grid help pl-lg-5">
+                <div class="col-lg-7 banner_bottom_grid help pl-lg-5 wow fadeInLeft " data-wow-duration="2s">
                     <img src="images/contact.png" alt=" " class="img-fluid mb-4">
 
 
@@ -390,17 +397,17 @@
     <!-- footer -->
     <footer class="py-lg-5 py-4">
         <svg viewBox="-450 -450 900 50" class="Section-curve">
-                    <path fill="#f7f7f7" d='M-559,-477
-                    C-499,-388 571,-397 620,-501'/>
-                  </svg>
+            <path fill="#f7f7f7" d='M-559,-477
+                    C-499,-388 571,-397 620,-501' />
+        </svg>
         <div class="container py-sm-3">
             <div class="row footer-grids">
                 <div class="col-lg-4 mt-4 logo2">
 
                     <h2>
                         <a class="navbar-brand px-0 mx-0 mb-4  " href="index.html">
-                            <img src="images/logo/Elite favicon.png" alt="" >
-                            
+                            <img src="images/logo/Elite favicon.png" alt="">
+
                         </a>
                     </h2>
 
@@ -436,23 +443,24 @@
                             </li>
                             <li>
                                 <a href="about.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                        <span data-hover="About us">About us</span>
-                                        </a>
+                                    <span data-hover="About us">About us</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="index.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                        <span data-hover="Services">Services</span>
-                                        </a>
+                                    <span data-hover="Services">Services</span>
+                                </a>
                             </li>
                             <li>
-                                <a href="projectDetials.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                            <span data-hover="Projects">Projects</span>
-                                            </a>
+                                <a href="projectDetials.html"><span class="fa fa-angle-double-right"
+                                        aria-hidden="true"></span>
+                                    <span data-hover="Projects">Projects</span>
+                                </a>
                             </li>
                             <li>
                                 <a href="contact.html"><span class="fa fa-angle-double-right" aria-hidden="true"></span>
-                                        <span data-hover="Contact Us">Contact Us</span>
-                                        </a>
+                                    <span data-hover="Contact Us">Contact Us</span>
+                                </a>
                             </li>
 
                         </ul>
@@ -463,8 +471,10 @@
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a></p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
+                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@Premium.com.sa</a>
+                    </p>
+                    <p><span class="fa fa-envelope"></span><a
+                            href="mailto:y.sharaf@Premium.com.sa">y.shara@Premium.com.sa</a></p>
                 </div>
 
             </div>
@@ -495,6 +505,12 @@
 
     </div>
     <!-- //copyright -->
+
+
+
+    <script src="js/wow.min.js"></script>
+
+    <script> new WOW().init(); </script>
 </body>
 
 </html>
