--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
     <!-- font-awesome-icons -->
     <link href="css/font-awesome.css" rel="stylesheet">
     <!-- //font-awesome-icons -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- animation -->
 
 </head>
 
@@ -99,10 +101,10 @@
     <!-- //home -->
     <!-- about -->
     <section class="about py-5">
-        <div class="container py-md-5">
-            <div class="about-hny-info text-left pr-lg-5">
-                <h3 class="tittle-w3ls mb-3"><span class="pink">Who</span> We Are</h3>
-                <p class="sub-tittle mt-3 mb-4 pr-lg-5">
+        <div class="container py-md-5 ">
+            <div class="about-hny-info text-left pr-lg-5 ">
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s"><span class="pink">Who</span> We Are</h3>
+                <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
                     Premium Security Electronics is a National Saudi Company, Partners and Authorized Distributors for many of the International Brands in the Field of Communications and Networking, we offer all the technical solutions for Low current Systems through a well-educated,
                     trained Engineers and Technicians.
                 </p>
@@ -113,11 +115,11 @@
     <!-- //about -->
     <!--/ab-->
     <section class="banner_bottom ">
-        <div class="container py-md-5">
+        <div class="container py-md-5 ">
             <div class="row inner_sec_info">
-                <div class="about-hny-info text-left pr-lg-5">
-                    <h3 class="tittle-w3ls mb-3"><span class="pink">Our</span> Vision</h3>
-                    <p class="sub-tittle mt-3 mb-4 pr-lg-5">
+                <div class="about-hny-info text-left pr-lg-5 ">
+                    <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span> Vision</h3>
+                    <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
                         We will Seek by the help of god to prove existence through our business and allianes with national and international companies in order to achieve our goals and satisfy our customers and commitment to the highest performance and the lowest cost according
                         to the schedule.
                     </p>
@@ -128,11 +130,13 @@
         </div>
     </section>
     <section class="about py-5">
-        <div class="container py-md-5">
-            <div class="about-hny-info text-left pr-lg-5">
-                <h3 class="tittle-w3ls mb-3"><span class="pink">Our</span> Mission</h3>
-                <p class="sub-tittle mt-3 mb-4 pr-lg-5">
-                    We are not alone but nique, Perfection is our goal deeloping and training are our way. Offering customers our services and upgrading the level of technical and technology support to provid a high quality alternatives in a low budgest is what we aim for.
+        <div class="container py-md-5 ">
+            <div class="about-hny-info text-left pr-lg-5 ">
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span> Mission</h3>
+                <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s" >
+                    We are not alone but nique, Perfection is our goal deeloping and training are our way.
+                     Offering customers our services and upgrading the level of technical and technology support to
+                      provid a high quality alternatives in a low budgest is what we aim for.
                 </p>
             </div>
 
@@ -252,7 +256,9 @@
 
     </div>
     <!-- //copyright -->
+    <script src="js/wow.min.js"></script>
 
+    <script> new WOW().init(); </script>
 </body>
 
 </html>
