--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
     <!-- font-awesome-icons -->
     <link href="css/font-awesome.css" rel="stylesheet">
     <!-- //font-awesome-icons -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- animation -->
 
 </head>
 
@@ -102,15 +104,15 @@
         <div class="content-w3ls-inn px-lg-5">
             <div class="container py-md-5 py-3">
                 <div class="px-lg-5">
-                    <h3 class="tittle-w3ls mb-lg-5 mb-4"><span class="pink">Contact</span> Us</h3>
+                    <h3 class="tittle-w3ls mb-lg-5 mb-4 wow fadeInLeft " data-wow-duration="1s "><span class="pink">Contact</span> Us</h3>
 
 
                     <div class="contact-hny-form mt-lg-5 mt-3">
 
                         <form action="https://sendmail.w3layouts.com/submitForm" method="post">
                             <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form-group">
+                                <div class="col-lg-6 wow fadeInLeft " data-wow-duration="2s ">
+                                    <div class="form-group ">
                                         <label for="w3lName">Your Name</label>
                                         <input type="text" name="w3lName" id="w3lName">
                                     </div>
@@ -124,20 +126,20 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
-                                    <div class="form-group">
+                                    <div class="form-group wow fadeInLeft " data-wow-duration="1s ">
                                         <label for="w3lSubject">Message</label>
                                         <textarea name="w3lMessage" id="w3lMessage">
     </textarea>
                                     </div>
                                 </div>
-                                <div class="form-group mx-auto mt-3">
+                                <div class="form-group mx-auto mt-3 wow fadeInLeft " data-wow-duration="2s ">
                                     <button type="submit" class="btn btn-default morebtn more black con-submit">Submit</button>
                                 </div>
                             </div>
 
                         </form>
                     </div>
-                    <div class="map-w3pvt mt-5">
+                    <div class="map-w3pvt mt-5 wow fadeInLeft " data-wow-duration="2s ">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14300.388413872768!2d43.9539099!3d26.3557211!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x29681c933a4e3481!2z2KfZhNil2YTZg9iq2LHZiNmG2YrYp9iqINin2YTZhdiq2YXZitiy2Kkg2KfZhNin2YXZhtmK2KkgUFJFTUlVTQ!5e0!3m2!1sar!2seg!4v1556110886735!5m2!1sar!2seg"
                             width="600" height="615" frameborder="0" style="border:0" allowfullscreen></iframe>
 
@@ -258,6 +260,9 @@
 
     </div>
     <!-- //copyright -->
+    <script src="js/wow.min.js"></script>
+
+    <script> new WOW().init(); </script>
 </body>
 
 </html>
